--- a/views/delete.handlebars
+++ b/views/delete.handlebars
@@ -5,12 +5,12 @@
 	
 	<div class="spacing3"></div>
 	
-	<div class="manage_options"> 
+	<div class=""> 
 	
 		<form action="/delete" method="post">
 		
-			<label for="show_id">Show ID:</label> <input type="number" name="show">
-			<input type="submit" value="Submit">
+			<label for="show_id">Show ID: </label> <input type="number" name="show">
+			<input class="link_button link_button_thin" type="submit" value="Submit">
 			
 		</form>
 		
@@ -19,7 +19,7 @@
 		<form action="/delete" method="post">
 			
 			<label for="char_id">Character ID: </label> <input type="number" name="character">
-			<input type="submit" value="Submit">
+			<input class="link_button link_button_thin" type="submit" value="Submit">
 			
 		</form>
 		
@@ -28,7 +28,7 @@
 		<form action="/delete" method="post">
 			
 			<label for="voice_id">Voice Actor ID: </label> <input type="number" name="voice_actor">
-			<input type="submit" value="Submit">
+			<input class="link_button link_button_thin" type="submit" value="Submit">
 			
 		</form>
 		
@@ -37,7 +37,7 @@
 		<form action="/delete" method="post">
 		
 			<label for="studio_id">Studio ID: </label> <input type="number" name="studio">
-			<input type="submit" value="Submit">
+			<input class="link_button link_button_thin" type="submit" value="Submit">
 			
 		</form>
 		
@@ -46,7 +46,7 @@
 		<form action="/delete" method="post">
 		
 			<label for="season_id">Season ID: </label> <input type="number" name="season">
-			<input type="submit" value="Submit">
+			<input class="link_button link_button_thin" type="submit" value="Submit">
 			
 		</form>
 	
