--- a/public/style.css
+++ b/public/style.css
@@ -243,15 +243,6 @@ input[type=submit] {
 }
 
 
-.manage_options {
-	display: inline-block;
-	border: 0.1em gray solid;
-	border-radius: 1em;
-	padding: 2em;
-	text-align: left;
-}
-
-
 .nav {
 	height: 5em;
 	border-bottom: 1px rgba(255, 255, 255, 0.25) solid;
@@ -320,6 +311,12 @@ input[type=submit] {
 	background-color: #02aaff;
 	border: 0.125em #02aaff solid;
 	cursor: pointer;
+}
+
+.link_button_thin {
+	border-radius: 0.5em;
+	padding: 0.25em 1em;
+	font-size: 10pt;
 }
 
 /* Disables spinner on number input */
