Formatted delete page so that everything is aligned

--- a/views/delete.handlebars
+++ b/views/delete.handlebars
@@ -2,54 +2,54 @@
 
 	<h2>Delete Row From Database</h2>
 	<p>{{message}}</p>
-	
+
 	<div class="spacing3"></div>
-	
-	<div class=""> 
-	
+
+	<div class="admin-toolpanel">
+
 		<form action="/delete" method="post">
-		
+
 			<label for="show_id">Show ID: </label> <input type="number" name="show">
 			<input class="link_button link_button_thin" type="submit" value="Submit">
-			
+
 		</form>
-		
-		<br>
-		
+
+		<br><br>
+
 		<form action="/delete" method="post">
-			
+
 			<label for="char_id">Character ID: </label> <input type="number" name="character">
 			<input class="link_button link_button_thin" type="submit" value="Submit">
-			
+
 		</form>
-		
-		<br>
-		
+
+		<br><br>
+
 		<form action="/delete" method="post">
-			
+
 			<label for="voice_id">Voice Actor ID: </label> <input type="number" name="voice_actor">
 			<input class="link_button link_button_thin" type="submit" value="Submit">
-			
+
 		</form>
-		
-		<br>
-		
+
+		<br><br>
+
 		<form action="/delete" method="post">
-		
+
 			<label for="studio_id">Studio ID: </label> <input type="number" name="studio">
 			<input class="link_button link_button_thin" type="submit" value="Submit">
-			
+
 		</form>
-		
-		<br>
-		
+
+		<br><br>
+
 		<form action="/delete" method="post">
-		
+
 			<label for="season_id">Season ID: </label> <input type="number" name="season">
 			<input class="link_button link_button_thin" type="submit" value="Submit">
-			
+
 		</form>
-	
+
 	</div>
 
 </div>
