--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,7 +1,7 @@
 <div class="main browse centered_text fades_in">
 	<h1>Update Show Information</h1>
 
-	<br><br>
+	<div class="spacing3"></div>
 
 	<div class="admin-toolpanel">
 
