messy implementation of allignment on admin pages

--- a/public/style.css
+++ b/public/style.css
@@ -347,6 +347,13 @@ input[type=number]::-webkit-outer-spin-button {
 	float: left;
 }
 
+.admin_submit {
+	display: inline-block;
+	float: left;
+	clear: left;
+	margin-left: 43%;
+}
+
 #admin_submit {
 	display: inline-block;
 	float: left;
