--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -10,7 +10,8 @@
 				<input type="radio" id="type_shows" name="type" value="show" checked> <label for="type_shows">Shows</label> <br>
 				<input type="radio" id="type_characters" name="type" value="character"> <label for="type_characters">Characters</label>
 				<br>
-				<input type="radio" id="type_voiceActors" name="type" value="voice_actor"> <label for="type_voiceActors">Voice Actors</label> <br>
+				<input type="radio" id="type_voiceActors" name="type" value="voice_actor"> <label for="type_voiceActors">Voice
+					Actors</label> <br>
 				<input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label> <br>
 
 				<br>
@@ -43,13 +44,13 @@
 	<div class="browse_results">
 
 		<table>
-		
+
 			<tr> {{#each headers}} <th>{{this}}</th> {{/each}} </tr>
-		
+
 			{{#each results}}
-				<tr> {{#each this}} <td>{{this}}</td> {{/each}} </tr>
+			<tr> {{#each this}} <td>{{this}}</td> {{/each}} </tr>
 			{{/each}}
-			
+
 		</table>
 
 	</div>
