--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -2,68 +2,85 @@
 
 	<h2>Create New Row In Database</h2>
 	<p>{{message}}</p>
-	
+
 	<div class="spacing3"></div>
-	
-	<div class="">
-	
+
+	<div class="admin-toolpanel">
+
 		<form action="/create" method="post">
-		
+
 			<p>Add Character</p>
 			<label>First Name: </label> <input type="text" name="first_name"> <br>
-			<label>Last Name: </label> <input type="text" name="last_name"> <br> 
+			<label>Last Name: </label> <input type="text" name="last_name"> <br>
 			<label>Voice Actor ID: </label> <input type="number" name="actor_id"> <br>
-			<label>Show ID: </label> <input type="number" name="show_id"> <br> 
-			<br> <input class="link_button link_button_thin" type="submit" value="Submit">
-			
+			<label>Show ID: </label> <input type="number" name="show_id"> <br>
+
+			<div class="admin_submit">
+				<input class="link_button link_button_thin" type="submit" value="Submit">
+			</div>
+
 		</form>
-		
-		<br> <br>
-		
+
+		<br> <br> <br> <br> <br>
+
 		<form action="/create" method="post">
-		
+
 			<p>Add Voice Actor</p>
 			<label>First Name: </label> <input type="text" name="first_name"> <br>
-			<label>Last Name: </label> <input type="text" name="last_name"> <br> 
-			<br> <input class="link_button link_button_thin" type="submit" value="Submit">
-			
+			<label>Last Name: </label> <input type="text" name="last_name">
+
+			<div class="spacing2"></div>
+
+			<div class="admin_submit">
+				<input class="link_button link_button_thin" type="submit" value="Submit">
+			</div>
+
 		</form>
-	
+
 	</div>
-	
+
 	<br> <br>
-	
-	<div class="">
-		
+
+	<div class="admin-toolpanel">
+
 		<form action="/create" method="post">
-		
+
 			<p>Add Show</p>
-			<label>Show Title: </label> <input type="text" name="title"> <br> 
-			<label>Studio ID: </label> <input type="number" name="studio_id"> <br> 
-			<label>Season ID: </label> <input type="number" name="season_id"> <br> 
-			<br> <input class="link_button link_button_thin" type="submit" value="Submit">
-			
+			<label>Show Title: </label> <input type="text" name="title"> <br>
+			<label>Studio ID: </label> <input type="number" name="studio_id"> <br>
+			<label>Season ID: </label> <input type="number" name="season_id"> <br>
+
+			<div class="admin_submit">
+				<input class="link_button link_button_thin" type="submit" value="Submit">
+			</div>
+
 		</form>
-		
-		<br> <br>
-	
+
+		<br> <br> <br> <br> <br>
+
 		<form action="/create" method="post">
-		
+
 			<p>Add Studio</p>
-			<label>Studio Name: </label> <input type="text" name="studio"> <br> <br>
-			<input class="link_button link_button_thin" type="submit" value="Submit">
-			
+			<label>Studio Name: </label> <input type="text" name="studio"> <br>
+
+			<div class="admin_submit">
+				<input class="link_button link_button_thin" type="submit" value="Submit">
+			</div>
+
 		</form>
-		
-		<br> <br>
-		
+
+		<br> <br> <br> <br> <br>
+
 		<form action="/create" method="post">
-		
+
 			<p>Add Season</p>
 			<label>Season: </label> <input type="text" name="season"> <br>
-			<label>Year: </label> <input type="number" name="year"> <br> <br>
-			<input class="link_button link_button_thin" type="submit" value="Submit">
-			
+			<label>Year: </label> <input type="number" name="year"> <br>
+
+			<div class="admin_submit">
+				<input class="link_button link_button_thin" type="submit" value="Submit">
+			</div>
+
 		</form>
 
 	</div>
