--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -26,7 +26,9 @@
 			<br>
 			<br>
 
-			<input class="link_button" id="admin_submit" type="submit" value="Submit">
+			<div class="admin_submit">
+				<input class="link_button" type="submit" value="Submit">
+			</div>
 			<br>
 		</form>
 
