--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,7 +1,7 @@
 <div class="main browse centered_text fades_in">
 	<h1>Update Show Information</h1>
 
-	<br><br>
+	<div class="spacing3"></div>
 
 	<div class="admin-toolpanel">
 
@@ -26,7 +26,9 @@
 			<br>
 			<br>
 
-			<input class="link_button" id="admin_submit" type="submit" value="Submit">
+			<div class="admin_submit">
+				<input class="link_button" type="submit" value="Submit">
+			</div>
 			<br>
 		</form>
 
