--- a/views/manage.handlebars
+++ b/views/manage.handlebars
@@ -5,7 +5,9 @@
 	<div class="spacing2"></div>
 
 	<a class="link_button" href="/create">Create</a>
+	<a class="link_button" href="/read">Read</a>
 	<a class="link_button" href="/update">Update</a>
 	<a class="link_button" href="/delete">Delete</a>
+
 
 </div>
