Added update functionality

--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -7,7 +7,7 @@
 
 	<div class="admin_panel">
 
-		<form action="/create" method="post">
+		<form action="/update" method="post">
 			
 			<input type="radio" name="table" value="character" checked> 
 			<p class="bold_text">Update Character</p>
@@ -25,7 +25,7 @@
 		
 		<br>
 
-		<form action="/create" method="post">
+		<form action="/update" method="post">
 	
 			<input type="radio" name="table" value="voice_actor" checked> 
 			<p class="bold_text">Update Voice Actor</p>
@@ -41,7 +41,7 @@
 		
 		<br>
 
-		<form action="/create" method="post">
+		<form action="/update" method="post">
 
 			<input type="radio" name="table" value="show" checked> 
 			<p class="bold_text">Update Show</p>
@@ -58,7 +58,7 @@
 		
 		<br>
 
-		<form action="/create" method="post">
+		<form action="/update" method="post">
 
 			<input type="radio" name="table" value="studio" checked> 
 			<p class="bold_text">Update Studio</p>
@@ -73,7 +73,7 @@
 		
 		<br>
 
-		<form action="/create" method="post">
+		<form action="/update" method="post">
 
 			<input type="radio" name="table" value="season" checked> 
 			<p class="bold_text">Update Season</p>
